# ZKAgent

./: .gitignore  main.py  pyproject.toml
.github/workflows/: playwright.yml
config/: settings.py
docs/: post_mortem_extraction.md
extraction-api-tests/: README.md  package-lock.json  package.json  playwright.config.ts
extraction-api-tests/.github/workflows/: playwright.yml
extraction-api-tests/fixtures/: jobPostings.ts
extraction-api-tests/pages/: ExtractionPage.ts
extraction-api-tests/tests/: edge-cases.spec.ts  extraction.spec.ts  health.spec.ts
notebooks/: smoke_test.py  test_agent.py  test_extraction.py  test_extraction_edge_cases.py
src/: __init__.py
src/agent/: react_agent.py  tools.py
src/api/: main.py  mock_extractor.py
src/extraction/: __init__.py  extractor.py  models.py
traces/: trace_What_is_the_current_price_of_B.json
